{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 21,
  "lineage": "308f8471-fb82-273d-5a26-a48596fc76d4",
  "resources": [
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sampleapp_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:758305131696:loadbalancer/app/sampleapp-alb-default/fbe4e1460c7e55a6",
            "arn_suffix": "app/sampleapp-alb-default/fbe4e1460c7e55a6",
            "dns_name": "sampleapp-alb-default-1696349610.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:758305131696:loadbalancer/app/sampleapp-alb-default/fbe4e1460c7e55a6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sampleapp-alb-default",
            "security_groups": [
              "sg-0c85353a1b6c057f2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01152c5f9d3fc4bde"
              },
              {
                "subnet_id": "subnet-06a9991733adb45bd"
              }
            ],
            "subnets": [
              "subnet-01152c5f9d3fc4bde",
              "subnet-06a9991733adb45bd"
            ],
            "tags": {
              "Environment": "default"
            },
            "vpc_id": "vpc-0cb87bd71fd2089e0",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener_80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:758305131696:listener/app/sampleapp-alb-default/fbe4e1460c7e55a6/7271acba284c9f94",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:758305131696:targetgroup/sampleapp-http-tg-default/9ce8a4c86137ded8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:758305131696:listener/app/sampleapp-alb-default/fbe4e1460c7e55a6/7271acba284c9f94",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:758305131696:loadbalancer/app/sampleapp-alb-default/fbe4e1460c7e55a6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.loadbalancer_module.aws_lb.sampleapp_alb",
            "module.loadbalancer_module.aws_lb_target_group.sampleapp_http_tg",
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sampleapp_http_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:758305131696:targetgroup/sampleapp-http-tg-default/9ce8a4c86137ded8",
            "arn_suffix": "targetgroup/sampleapp-http-tg-default/9ce8a4c86137ded8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:758305131696:targetgroup/sampleapp-http-tg-default/9ce8a4c86137ded8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sampleapp-http-tg-default",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cb87bd71fd2089e0"
          }
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privatesg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:758305131696:security-group/sg-00810ffd8e2e1f578",
            "description": "privatesg for EC2 default",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-00810ffd8e2e1f578",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c85353a1b6c057f2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "privatesg_default",
            "name_prefix": null,
            "owner_id": "758305131696",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0cb87bd71fd2089e0"
          },
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:758305131696:security-group/sg-0c85353a1b6c057f2",
            "description": "publicsg for ELB default",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c85353a1b6c057f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "publicsg_default",
            "name_prefix": null,
            "owner_id": "758305131696",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb87bd71fd2089e0"
          }
        }
      ]
    }
  ]
}